fix: Update response parsing to account for missing services
* Change the handling of the received links to more safely deal with
missing services.
* Move logging into an importable module and add more logging.
* Update start script
* Use yarn script for Dockerfile entrypoint

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "typed-rest-client": "^1.7.3"
   },
   "scripts": {
-    "run": "node dist/main.js",
+    "start": "node dist/main.js",
     "build": "tsc",
     "lint": "eslint --fix",
     "clean": "rimraf dist",
