--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
   "private": true,
   "devDependencies": {
     "@semantic-release/git": "^9.0.0",
-    "@tsconfig/node12": "^1.0.7",
+    "@tsconfig/node14": "^1.0.0",
     "@types/node": "^14.11.2",
     "@types/pino": "^6.3.1",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "eslint": "^7.9.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-config-prettier": "^7.2.0",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.1.2",
     "typescript": "^4.0.3"
