--- a/package.json
+++ b/package.json
@@ -9,24 +9,29 @@
   "devDependencies": {
     "@semantic-release/git": "^9.0.0",
     "@tsconfig/node14": "^1.0.0",
+    "@types/convict": "^6.0.1",
     "@types/node": "^14.11.2",
     "@types/pino": "^6.3.1",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "eslint": "^7.9.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.2.0",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.1.2",
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@sinclair/typebox": "^0.16.5",
+    "convict": "^6.0.1",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
+    "fastify": "^3.14.2",
+    "fastify-plugin": "^3.0.0",
     "pino": "^6.6.1",
     "typed-rest-client": "^1.7.3"
   },
   "scripts": {
-    "start": "node dist/main.js",
+    "start": "node dist/index.js",
     "build": "tsc",
     "lint": "eslint --fix",
     "clean": "rimraf dist",
