--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/pino": "^6.3.1",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
+    "busboy": "^0.3.1",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^8.2.0",
     "rimraf": "^3.0.2",
@@ -26,6 +27,7 @@
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "fastify": "^3.14.2",
+    "fastify-multipart": "^4.0.3",
     "fastify-plugin": "^3.0.0",
     "pino": "^6.6.1",
     "stream-to-string": "^1.2.0",
