--- a/package.json
+++ b/package.json
@@ -7,33 +7,34 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "@semantic-release/git": "^9.0.0",
-    "@tsconfig/node14": "^1.0.0",
-    "@types/convict": "^6.0.1",
-    "@types/node": "^14.11.2",
-    "@types/pino": "^6.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^8.2.0",
+    "@semantic-release/git": "^10.0.1",
+    "@tsconfig/node18": "^1.0.1",
+    "@types/node": "^18.14.2",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.1.2",
-    "typescript": "^4.0.3"
+    "semantic-release": "^20.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@sinclair/typebox": "^0.16.5",
-    "convict": "^6.0.1",
-    "discord.js": "^12.3.1",
-    "dotenv": "^8.2.0",
-    "fastify": "^3.14.2",
-    "fastify-multer": "^2.0.2",
-    "fastify-plugin": "^3.0.0",
-    "pino": "^6.6.1",
-    "stream-to-string": "^1.2.0",
-    "typed-rest-client": "^1.7.3"
+    "@sinclair/typebox": "^0.25.24",
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
+    "fastify": "^4.13.0",
+    "fastify-multer": "^2.0.3",
+    "fastify-plugin": "^4.5.0",
+    "pino": "^8.11.0",
+    "stream-to-string": "^1.2.1",
+    "typed-rest-client": "^1.8.9",
+    "znv": "^0.3.2",
+    "zod": "^3.20.6"
   },
   "scripts": {
     "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
     "build": "tsc",
     "lint": "eslint --fix",
     "clean": "rimraf dist",
