--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,3 +1,5 @@
+# yaml-language-server $schema=https://json.schemastore.org/github-workflow.json
+
 name: ci
 on:
   push:
@@ -14,7 +16,7 @@ jobs:
       packages: write
       contents: read
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Build image
         run: docker build . --file Dockerfile --tag $IMAGE_NAME
       - name: Log in to GitHub Container Registry
