--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
+		"@fastify/schedule": "^4.1.1",
 		"@sinclair/typebox": "^0.32.15",
+		"croner": "^8.0.1",
+		"dayjs": "^1.11.10",
 		"discord.js": "^14.14.1",
 		"dotenv": "^16.4.5",
 		"fastify": "^4.26.2",
@@ -28,6 +31,7 @@
 		"fastify-plugin": "^4.5.1",
 		"pino": "^8.19.0",
 		"stream-to-string": "^1.2.1",
+		"toad-scheduler": "^3.0.1",
 		"typed-rest-client": "^1.8.11",
 		"znv": "^0.4.0",
 		"zod": "^3.22.4"
