add twitch live notifications

--- a/package.json
+++ b/package.json
@@ -8,20 +8,25 @@
 	"devDependencies": {
 		"@semantic-release/git": "^10.0.1",
 		"@tsconfig/node18": "^18.2.2",
-		"@types/node": "^20.11.24",
-		"@typescript-eslint/eslint-plugin": "^7.1.1",
-		"@typescript-eslint/parser": "^7.1.1",
+		"@twurple/eventsub-base": "^7.1.0",
+		"@types/node": "^20.11.30",
+		"@typescript-eslint/eslint-plugin": "^7.3.1",
+		"@typescript-eslint/parser": "^7.3.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"prettier": "^3.2.5",
 		"rimraf": "^5.0.5",
-		"semantic-release": "^23.0.2",
+		"semantic-release": "^23.0.5",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.3.3"
+		"typescript": "^5.4.2"
 	},
 	"dependencies": {
+		"@fastify/express": "^2.3.0",
 		"@fastify/schedule": "^4.1.1",
-		"@sinclair/typebox": "^0.32.15",
+		"@sinclair/typebox": "^0.32.16",
+		"@twurple/api": "^7.1.0",
+		"@twurple/auth": "^7.1.0",
+		"@twurple/eventsub-http": "^7.1.0",
 		"croner": "^8.0.1",
 		"dayjs": "^1.11.10",
 		"discord.js": "^14.14.1",
