--- a/package.json
+++ b/package.json
@@ -1,32 +1,61 @@
 {
 	"name": "eotr-bot",
 	"version": "0.0.1",
-	"main": "dist/main.js",
 	"repository": "git@github.com:malakhite/eotr-bot.git",
 	"author": "Scott Abbey <scott@scottabbey.com>",
 	"license": "MIT",
 	"devDependencies": {
+		"@nestjs/cli": "^10.3.2",
+		"@nestjs/schematics": "^10.1.1",
+		"@nestjs/testing": "^10.3.4",
 		"@semantic-release/git": "^10.0.1",
+		"@swc/cli": "^0.3.10",
+		"@swc/core": "^1.4.8",
+		"@swc/jest": "^0.2.36",
 		"@tsconfig/node18": "^18.2.2",
 		"@twurple/eventsub-base": "^7.1.0",
+		"@types/express": "^4.17.21",
+		"@types/jest": "^29.5.12",
 		"@types/node": "^20.11.30",
+		"@types/supertest": "^6.0.2",
 		"@typescript-eslint/eslint-plugin": "^7.3.1",
 		"@typescript-eslint/parser": "^7.3.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-import": "^2.29.1",
+		"jest": "^29.7.0",
 		"prettier": "^3.2.5",
 		"rimraf": "^5.0.5",
 		"semantic-release": "^23.0.5",
+		"source-map-support": "^0.5.21",
+		"supertest": "^6.3.4",
+		"ts-jest": "^29.1.2",
+		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
+		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.4.2"
 	},
 	"dependencies": {
 		"@fastify/express": "^2.3.0",
 		"@fastify/schedule": "^4.1.1",
+		"@nestjs-twurple/api": "^0.1.1",
+		"@nestjs-twurple/auth": "^0.1.1",
+		"@nestjs-twurple/eventsub-http": "^0.1.1",
+		"@nestjs/axios": "^3.0.2",
+		"@nestjs/common": "^10.3.4",
+		"@nestjs/config": "^3.2.0",
+		"@nestjs/core": "^10.3.4",
+		"@nestjs/event-emitter": "^2.0.4",
+		"@nestjs/platform-express": "^10.3.5",
 		"@sinclair/typebox": "^0.32.16",
 		"@twurple/api": "^7.1.0",
 		"@twurple/auth": "^7.1.0",
 		"@twurple/eventsub-http": "^7.1.0",
+		"axios": "^1.6.8",
+		"body-parser": "^1.20.2",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.1",
 		"croner": "^8.0.1",
 		"dayjs": "^1.11.10",
 		"discord.js": "^14.14.1",
@@ -34,7 +63,10 @@
 		"fastify": "^4.26.2",
 		"fastify-multer": "^2.0.3",
 		"fastify-plugin": "^4.5.1",
+		"necord": "^6.8.1",
 		"pino": "^8.19.0",
+		"reflect-metadata": "^0.2.1",
+		"rxjs": "^7.8.1",
 		"stream-to-string": "^1.2.1",
 		"toad-scheduler": "^3.0.1",
 		"typed-rest-client": "^1.8.11",
@@ -42,11 +74,34 @@
 		"zod": "^3.22.4"
 	},
 	"scripts": {
-		"start": "node dist/index.js",
-		"dev": "ts-node src/index.ts",
-		"build": "tsc",
-		"lint": "eslint --fix",
-		"clean": "rimraf dist",
-		"release": "semantic-release"
+		"build": "nest build",
+		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+		"start": "nest start",
+		"start:dev": "nest start --watch",
+		"start:debug": "nest start --debug --watch",
+		"start:prod": "node dist/main",
+		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:cov": "jest --coverage",
+		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
+		"test:e2e": "jest --config ./test/jest-e2e.json"
+	},
+	"jest": {
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
+		"rootDir": "src",
+		"testRegex": ".*\\.spec\\.ts$",
+		"transform": {
+			"^.+\\.(t|j)s$": "@swc/jest"
+		},
+		"collectCoverageFrom": [
+			"**/*.(t|j)s"
+		],
+		"coverageDirectory": "../coverage",
+		"testEnvironment": "node"
 	}
 }
