--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
-	"extends": "@tsconfig/node18/tsconfig.json",
 	"compilerOptions": {
-		"baseUrl": "src",
-		"outDir": "dist",
-		"resolveJsonModule": true,
-		"module": "CommonJS",
-		"moduleResolution": "Node"
+		"module": "commonjs",
+		"declaration": true,
+		"removeComments": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"allowSyntheticDefaultImports": true,
+		"target": "ES2021",
+		"sourceMap": true,
+		"outDir": "./dist",
+		"baseUrl": "./",
+		"incremental": true,
+		"skipLibCheck": true
 	}
 }
