--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@nestjs/core": "^10.3.4",
 		"@nestjs/event-emitter": "^2.0.4",
 		"@nestjs/platform-express": "^10.3.5",
+		"@nestjs/schedule": "^4.0.1",
 		"@sinclair/typebox": "^0.32.16",
 		"@twurple/api": "^7.1.0",
 		"@twurple/auth": "^7.1.0",
