--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
 		"fastify-multer": "^2.0.3",
 		"fastify-plugin": "^4.5.1",
 		"necord": "^6.8.1",
+		"nestjs-pino": "^4.0.0",
 		"pino": "^8.19.0",
+		"pino-http": "^9.0.0",
 		"reflect-metadata": "^0.2.1",
 		"rxjs": "^7.8.1",
 		"stream-to-string": "^1.2.1",
