--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@tsconfig/node18": "^18.2.2",
 		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.12",
+		"@types/multer": "^1.4.11",
 		"@types/node": "^20.11.30",
 		"@types/supertest": "^6.0.2",
 		"@typescript-eslint/eslint-plugin": "^7.3.1",
