--- a/package.json
+++ b/package.json
@@ -5,68 +5,68 @@
 	"author": "Scott Abbey <scott@scottabbey.com>",
 	"license": "MIT",
 	"devDependencies": {
-		"@nestjs/cli": "^10.3.2",
-		"@nestjs/schematics": "^10.1.1",
-		"@nestjs/testing": "^10.3.8",
+		"@nestjs/cli": "^10.4.1",
+		"@nestjs/schematics": "^10.1.2",
+		"@nestjs/testing": "^10.3.10",
 		"@semantic-release/git": "^10.0.1",
-		"@swc/cli": "^0.3.12",
-		"@swc/core": "^1.4.17",
+		"@swc/cli": "^0.3.14",
+		"@swc/core": "^1.6.7",
 		"@swc/jest": "^0.2.36",
 		"@tsconfig/node18": "^18.2.4",
 		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.12",
 		"@types/multer": "^1.4.11",
-		"@types/node": "^20.12.7",
+		"@types/node": "^20.14.9",
 		"@types/supertest": "^6.0.2",
-		"@typescript-eslint/eslint-plugin": "^7.7.1",
-		"@typescript-eslint/parser": "^7.7.1",
+		"@typescript-eslint/eslint-plugin": "^7.15.0",
+		"@typescript-eslint/parser": "^7.15.0",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.1",
 		"jest": "^29.7.0",
-		"prettier": "^3.2.5",
-		"rimraf": "^5.0.5",
-		"semantic-release": "^23.0.8",
+		"prettier": "^3.3.2",
+		"rimraf": "^5.0.7",
+		"semantic-release": "^23.1.1",
 		"source-map-support": "^0.5.21",
 		"supertest": "^6.3.4",
-		"ts-jest": "^29.1.2",
+		"ts-jest": "^29.1.5",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.4.5"
+		"typescript": "^5.5.3"
 	},
 	"dependencies": {
 		"@nestjs-twurple/api": "^0.1.1",
 		"@nestjs-twurple/auth": "^0.1.1",
 		"@nestjs-twurple/eventsub-http": "^0.1.1",
 		"@nestjs/axios": "^3.0.2",
-		"@nestjs/common": "^10.3.8",
-		"@nestjs/config": "^3.2.2",
-		"@nestjs/core": "^10.3.8",
+		"@nestjs/common": "^10.3.10",
+		"@nestjs/config": "^3.2.3",
+		"@nestjs/core": "^10.3.10",
 		"@nestjs/event-emitter": "^2.0.4",
-		"@nestjs/platform-express": "^10.3.8",
-		"@nestjs/schedule": "^4.0.2",
+		"@nestjs/platform-express": "^10.3.10",
+		"@nestjs/schedule": "^4.1.0",
 		"@twurple/api": "^7.1.0",
 		"@twurple/auth": "^7.1.0",
 		"@twurple/eventsub-base": "^7.1.0",
 		"@twurple/eventsub-http": "^7.1.0",
-		"axios": "^1.6.8",
+		"axios": "^1.7.2",
 		"body-parser": "^1.20.2",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
 		"croner": "^8.0.2",
-		"dayjs": "^1.11.10",
-		"discord.js": "^14.14.1",
+		"dayjs": "^1.11.11",
+		"discord.js": "^14.15.3",
 		"necord": "^6.8.3",
-		"nestjs-pino": "^4.0.0",
-		"pino": "^8.20.0",
+		"nestjs-pino": "^4.1.0",
+		"pino": "^8.21.0",
 		"pino-http": "^9.0.0",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.1",
 		"stream-to-string": "^1.2.1",
 		"toad-scheduler": "^3.0.1",
-		"zod": "^3.23.4"
+		"zod": "^3.23.8"
 	},
 	"scripts": {
 		"build": "nest build",
@@ -98,5 +98,6 @@
 		],
 		"coverageDirectory": "../coverage",
 		"testEnvironment": "node"
-	}
+	},
+	"packageManager": "pnpm@9.1.0+sha512.67f5879916a9293e5cf059c23853d571beaf4f753c707f40cb22bed5fb1578c6aad3b6c4107ccb3ba0b35be003eb621a16471ac836c87beb53f9d54bb4612724"
 }
