--- a/package.json
+++ b/package.json
@@ -5,68 +5,69 @@
 	"author": "Scott Abbey <scott@scottabbey.com>",
 	"license": "MIT",
 	"devDependencies": {
-		"@nestjs/cli": "^10.4.1",
-		"@nestjs/schematics": "^10.1.2",
-		"@nestjs/testing": "^10.3.10",
+		"@nestjs/cli": "^11.0.8",
+		"@nestjs/schematics": "^11.0.5",
+		"@nestjs/testing": "^11.1.5",
 		"@semantic-release/git": "^10.0.1",
-		"@swc/cli": "^0.3.14",
-		"@swc/core": "^1.6.7",
-		"@swc/jest": "^0.2.36",
+		"@swc/cli": "^0.7.8",
+		"@swc/core": "^1.13.2",
+		"@swc/jest": "^0.2.39",
 		"@tsconfig/node18": "^18.2.4",
-		"@types/express": "^4.17.21",
-		"@types/jest": "^29.5.12",
-		"@types/multer": "^1.4.11",
-		"@types/node": "^20.14.9",
-		"@types/supertest": "^6.0.2",
-		"@typescript-eslint/eslint-plugin": "^7.15.0",
-		"@typescript-eslint/parser": "^7.15.0",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import": "^2.29.1",
-		"jest": "^29.7.0",
-		"prettier": "^3.3.2",
-		"rimraf": "^5.0.7",
-		"semantic-release": "^23.1.1",
+		"@types/express": "^5.0.3",
+		"@types/jest": "^30.0.0",
+		"@types/multer": "^2.0.0",
+		"@types/node": "^22.13.1",
+		"@types/supertest": "^6.0.3",
+		"@typescript-eslint/eslint-plugin": "^8.38.0",
+		"@typescript-eslint/parser": "^8.38.0",
+		"discord-api-types": "0.37.99",
+		"eslint": "^9.32.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-import-resolver-typescript": "^4.4.4",
+		"eslint-plugin-import": "^2.32.0",
+		"jest": "^30.0.5",
+		"prettier": "^3.6.2",
+		"rimraf": "^6.0.1",
+		"semantic-release": "^24.2.7",
 		"source-map-support": "^0.5.21",
-		"supertest": "^6.3.4",
-		"ts-jest": "^29.1.5",
-		"ts-loader": "^9.5.1",
+		"supertest": "^7.1.4",
+		"ts-jest": "^29.4.0",
+		"ts-loader": "^9.5.2",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.5.3"
+		"typescript": "^5.8.3"
 	},
 	"dependencies": {
-		"@nestjs-twurple/api": "^0.1.1",
-		"@nestjs-twurple/auth": "^0.1.1",
-		"@nestjs-twurple/eventsub-http": "^0.1.1",
-		"@nestjs/axios": "^3.0.2",
-		"@nestjs/common": "^10.3.10",
-		"@nestjs/config": "^3.2.3",
-		"@nestjs/core": "^10.3.10",
-		"@nestjs/event-emitter": "^2.0.4",
-		"@nestjs/platform-express": "^10.3.10",
-		"@nestjs/schedule": "^4.1.0",
-		"@twurple/api": "^7.1.0",
-		"@twurple/auth": "^7.1.0",
-		"@twurple/eventsub-base": "^7.1.0",
-		"@twurple/eventsub-http": "^7.1.0",
-		"axios": "^1.7.2",
-		"body-parser": "^1.20.2",
+		"@nestjs-twurple/api": "^0.2.0",
+		"@nestjs-twurple/auth": "^0.2.0",
+		"@nestjs-twurple/eventsub-http": "^0.2.0",
+		"@nestjs/axios": "^4.0.1",
+		"@nestjs/common": "^11.1.5",
+		"@nestjs/config": "^4.0.2",
+		"@nestjs/core": "^11.1.5",
+		"@nestjs/event-emitter": "^3.0.1",
+		"@nestjs/platform-express": "^11.1.5",
+		"@nestjs/schedule": "^6.0.0",
+		"@twurple/api": "^7.4.0",
+		"@twurple/auth": "^7.4.0",
+		"@twurple/eventsub-base": "^7.4.0",
+		"@twurple/eventsub-http": "^7.4.0",
+		"axios": "^1.11.0",
+		"body-parser": "^2.2.0",
 		"class-transformer": "^0.5.1",
-		"class-validator": "^0.14.1",
-		"croner": "^8.0.2",
-		"dayjs": "^1.11.11",
-		"discord.js": "^14.15.3",
-		"necord": "^6.8.3",
-		"nestjs-pino": "^4.1.0",
-		"pino": "^8.21.0",
-		"pino-http": "^9.0.0",
+		"class-validator": "^0.14.2",
+		"croner": "^9.1.0",
+		"dayjs": "^1.11.13",
+		"discord.js": "^14.21.0",
+		"necord": "^6.9.1",
+		"nestjs-pino": "^4.4.0",
+		"pino": "^9.7.0",
+		"pino-http": "^10.5.0",
 		"reflect-metadata": "^0.2.2",
-		"rxjs": "^7.8.1",
+		"rxjs": "^7.8.2",
 		"stream-to-string": "^1.2.1",
-		"toad-scheduler": "^3.0.1",
-		"zod": "^3.23.8"
+		"toad-scheduler": "^3.1.0",
+		"zod": "^4.0.10"
 	},
 	"scripts": {
 		"build": "nest build",
@@ -99,5 +100,5 @@
 		"coverageDirectory": "../coverage",
 		"testEnvironment": "node"
 	},
-	"packageManager": "pnpm@9.1.0+sha512.67f5879916a9293e5cf059c23853d571beaf4f753c707f40cb22bed5fb1578c6aad3b6c4107ccb3ba0b35be003eb621a16471ac836c87beb53f9d54bb4612724"
+	"packageManager": "pnpm@10.14.0-0+sha512.2cd47a0cbf5f1d1de7693a88307a0ede5be94e0d3b34853d800ee775efbea0650cb562b77605ec80bc8d925f5cd27c4dfe8bb04d3a0b76090784c664450d32d6"
 }
