update build and dependencies

--- a/package.json
+++ b/package.json
@@ -5,69 +5,69 @@
 	"author": "Scott Abbey <scott@scottabbey.com>",
 	"license": "MIT",
 	"devDependencies": {
-		"@nestjs/cli": "^11.0.8",
-		"@nestjs/schematics": "^11.0.5",
-		"@nestjs/testing": "^11.1.5",
+		"@nestjs/cli": "^11.0.10",
+		"@nestjs/schematics": "^11.0.9",
+		"@nestjs/testing": "^11.1.8",
 		"@semantic-release/git": "^10.0.1",
 		"@swc/cli": "^0.7.8",
-		"@swc/core": "^1.13.2",
+		"@swc/core": "^1.14.0",
 		"@swc/jest": "^0.2.39",
 		"@tsconfig/node18": "^18.2.4",
-		"@types/express": "^5.0.3",
+		"@types/express": "^5.0.5",
 		"@types/jest": "^30.0.0",
 		"@types/multer": "^2.0.0",
-		"@types/node": "^22.13.1",
+		"@types/node": "^22.18.13",
 		"@types/supertest": "^6.0.3",
-		"@typescript-eslint/eslint-plugin": "^8.38.0",
-		"@typescript-eslint/parser": "^8.38.0",
+		"@typescript-eslint/eslint-plugin": "^8.46.2",
+		"@typescript-eslint/parser": "^8.46.2",
 		"discord-api-types": "0.37.99",
-		"eslint": "^9.32.0",
+		"eslint": "^9.39.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-import-resolver-typescript": "^4.4.4",
 		"eslint-plugin-import": "^2.32.0",
-		"jest": "^30.0.5",
+		"jest": "^30.2.0",
 		"prettier": "^3.6.2",
-		"rimraf": "^6.0.1",
-		"semantic-release": "^24.2.7",
+		"rimraf": "^6.1.0",
+		"semantic-release": "^24.2.9",
 		"source-map-support": "^0.5.21",
 		"supertest": "^7.1.4",
-		"ts-jest": "^29.4.0",
-		"ts-loader": "^9.5.2",
+		"ts-jest": "^29.4.5",
+		"ts-loader": "^9.5.4",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.8.3"
+		"typescript": "^5.9.3"
 	},
 	"dependencies": {
 		"@nestjs-twurple/api": "^0.2.0",
 		"@nestjs-twurple/auth": "^0.2.0",
 		"@nestjs-twurple/eventsub-http": "^0.2.0",
 		"@nestjs/axios": "^4.0.1",
-		"@nestjs/common": "^11.1.5",
+		"@nestjs/common": "^11.1.8",
 		"@nestjs/config": "^4.0.2",
-		"@nestjs/core": "^11.1.5",
+		"@nestjs/core": "^11.1.8",
 		"@nestjs/event-emitter": "^3.0.1",
-		"@nestjs/platform-express": "^11.1.5",
-		"@nestjs/schedule": "^6.0.0",
+		"@nestjs/platform-express": "^11.1.8",
+		"@nestjs/schedule": "^6.0.1",
 		"@twurple/api": "^7.4.0",
 		"@twurple/auth": "^7.4.0",
 		"@twurple/eventsub-base": "^7.4.0",
 		"@twurple/eventsub-http": "^7.4.0",
-		"axios": "^1.11.0",
+		"axios": "^1.13.1",
 		"body-parser": "^2.2.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
 		"croner": "^9.1.0",
-		"dayjs": "^1.11.13",
-		"discord.js": "^14.21.0",
-		"necord": "^6.9.1",
-		"nestjs-pino": "^4.4.0",
-		"pino": "^9.7.0",
-		"pino-http": "^10.5.0",
+		"dayjs": "^1.11.19",
+		"discord.js": "^14.24.2",
+		"necord": "^6.11.2",
+		"nestjs-pino": "^4.4.1",
+		"pino": "^10.1.0",
+		"pino-http": "^11.0.0",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.2",
 		"stream-to-string": "^1.2.1",
 		"toad-scheduler": "^3.1.0",
-		"zod": "^4.0.10"
+		"zod": "^4.1.12"
 	},
 	"scripts": {
 		"build": "nest build",
@@ -100,5 +100,5 @@
 		"coverageDirectory": "../coverage",
 		"testEnvironment": "node"
 	},
-	"packageManager": "pnpm@10.14.0-0+sha512.2cd47a0cbf5f1d1de7693a88307a0ede5be94e0d3b34853d800ee775efbea0650cb562b77605ec80bc8d925f5cd27c4dfe8bb04d3a0b76090784c664450d32d6"
+	"packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
 }
